--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -35,6 +35,8 @@ from common.djangoapps.pipeline_mako import render_require_js_path_overrides
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="${static.url('css/style.css')}" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6400339910322587"
+     crossorigin="anonymous"></script>
 
 ## Define a couple of helper functions to make life easier when
 ## embedding theme conditionals into templates. All inheriting
